--- a/Flexbox/design2.html
+++ b/Flexbox/design2.html
@@ -27,11 +27,14 @@
         .middle-section{
             flex : 1;
             padding-top: 12px;
+            display: flex;
+            
 
 
         }
         .search_bar{
-            width:500px;
+            max-width:500px;
+            flex : 1;
             height: 25px;
             padding-left: 10px;
             border-radius: 20px;
